# mlx-baselines3

./: .gitignore  AGENT.md  AGENTS.md  EFFICIENCY_REPORT.md  MLX_SB3_RECREATION_PLAN.md  README.md  phase4_bugs.md  pyproject.toml
.github/workflows/: test.yml
examples/: train_cartpole_a2c.py  train_cartpole_dqn.py  train_cartpole_ppo.py  train_pendulum_sac.py  train_pendulum_td3.py
mlx_baselines3/: __init__.py
mlx_baselines3/a2c/: __init__.py  a2c.py  policies.py
mlx_baselines3/common/: __init__.py  array_utils.py  base_class.py  buffers.py  callbacks.py  distributions.py  functional_losses.py  jit_optimizations.py  logger.py  optimized_training.py  optimizers.py  policies.py  preprocessing.py  schedules.py  torch_layers.py  type_aliases.py  types.py  utils.py
mlx_baselines3/common/vec_env/: __init__.py  base_vec_env.py  dummy_vec_env.py  vec_normalize.py
mlx_baselines3/dqn/: __init__.py  dqn.py  policies.py
mlx_baselines3/ppo/: __init__.py  optimized_ppo.py  policies.py  ppo.py
mlx_baselines3/sac/: __init__.py  policies.py  sac.py
mlx_baselines3/td3/: __init__.py  policies.py  td3.py
notes/: initial_plan.md  mlx-baselines3_spec.md  mlx-baselines3_spec.md.bak  phase4_bugs.md
tests/: test_a2c.py  test_buffer_performance.py  test_buffers.py  test_callbacks.py  test_distributions.py  test_dqn.py  test_final_performance.py  test_gradient_stability.py  test_imports.py  test_integration.py  test_logger.py  test_optimized_performance.py  test_optimizers.py  test_parameter_registry.py  test_performance_benchmarks.py  test_policies.py  test_ppo.py  test_ppo_optimizer_integration.py  test_preprocessing.py  test_reproducibility.py  test_sac.py  test_save_load_api_parity.py  test_save_load_roundtrip.py  test_schedules.py  test_td3.py  test_torch_layers.py  test_vec_env.py  test_vec_normalize.py
