[project]
name = "mlx-baselines3"
version = "0.1.0"
description = "MLX implementation of Stable Baselines 3 for Apple Silicon"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mlx>=0.0.9",
    "gymnasium>=0.29.0",
    "numpy>=1.20.0",
    "cloudpickle",
]

[project.optional-dependencies]
tests = [
    "pytest>=6.0",
    "pytest-cov",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]
dev = [
    "mypy",
    "isort",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/pruthvipmr/mlx-baselines3"
Repository = "https://github.com/pruthvipmr/mlx-baselines3"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"
line_length = 88


[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E203"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "performance: marks tests as performance benchmarks",
]
